Fix position and auto-zoom in Safari on iOS

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
+html {
+  height: stretch;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
+  min-height: stretch;
 
   display: flex;
   flex-direction: column;
